# lazy

./: CMakeLists.txt  Readme.md
inc/lazy/: lazy.hpp  task.hpp
test/: lazy.cpp  task.cpp
